# ai-document-classifier

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCH.md  CLAUDE.md  COLLABORATION.md  DECISIONS.md  Dockerfile  LICENSES.md  PROJECT_PLAN.md  README.md  RUNBOOK.md  SECURITY.md  alembic.ini  docker-compose.yml  project.txt  pyproject.toml
.github/workflows/: ci.yml
1reference/: full_plan.md  member_c_reference.md  what_this_folder_is.md
1reference/Notebooks/: day_2_solution.ipynb  week_6_day_1_solution.ipynb
app/: __init__.py  config.py  main.py
app/api/: __init__.py  deps.py  middleware.py
app/api/routes/: __init__.py  audit.py  batches.py  predictions.py  users.py
app/auth/: backend.py  fastapi_users.py  schemas.py  user_manager.py
app/classifier/: __init__.py  model.py  predict.py
app/classifier/eval/: __init__.py  golden.py  golden_expected.json
app/classifier/eval/golden_images/: 0001.tif  0002.tif  0003.tif  0004.tif  0005.tif  0006.tif  0007.tif  0008.tif  0009.tif  0010.tif  0011.tif  0012.tif  0013.tif  0014.tif  0015.tif  0016.tif  0017.tif  0018.tif  0019.tif  0020.tif  0021.tif  0022.tif  0023.tif  0024.tif  0025.tif  0026.tif  0027.tif  0028.tif  0029.tif  0030.tif  0031.tif  0032.tif  0033.tif  0034.tif  0035.tif  0036.tif  0037.tif  0038.tif  0039.tif  0040.tif  (+10 more)
app/classifier/models/: classifier.pt  model_card.json
app/classifier/notebooks/: train_rvlcdip .ipynb
app/db/: __init__.py  models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial_schema.py
app/domain/: __init__.py  audit.py  audit_repo.py  batch.py  prediction.py  user.py
app/infra/: __init__.py  blob.py  cache.py  casbin_enforcer.py  logging_setup.py  queue.py  sftp.py  vault.py
app/repositories/: __init__.py  audit_repo.py  batch_repo.py  prediction_repo.py  user_repo.py
app/services/: __init__.py  audit_service.py  batch_service.py  mappers.py  prediction_service.py  user_service.py
app/workers/: __init__.py  inference.py  ingest.py
frontend/: index.html  package-lock.json  package.json
frontend/public/: latency-results.json
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ConfidenceBar.tsx  Navbar.tsx  ProtectedRoute.tsx  StatusBadge.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AdminPage.tsx  BatchDetailPage.tsx  BatchListPage.tsx  LoginPage.tsx
frontend/src/utils/: overlay.ts
scripts/: benchmark.py  casbin_seed.py  minio_init.py  smoke_check.py  test_phase8.py  vault_seed.py
tests/: conftest.py  test_classifier_model.py  test_classifier_predict.py
tests/unit/: test_audit_service.py  test_batch_service.py  test_blob_adapter.py  test_cache_adapter.py  test_config.py  test_domain_models.py  test_ingest_validation.py  test_mappers.py  test_overlay.py  test_permission_dependencies.py  test_prediction_service.py  test_queue_adapter.py  test_sftp_adapter.py  test_user_service.py
