[project]
name = "doc-classifier"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "casbin>=1.36.0",
    "casbin-sqlalchemy-adapter>=0.5.0",
    "fastapi-cache2[redis]>=0.2.1",
    "rq>=1.16.0",
    "redis>=5.0.0",
    "hvac>=2.1.0",
    "miniopy-async>=1.19.0",
    "structlog>=24.1.0",
    "paramiko>=3.4.0",
    "pillow>=10.3.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "coverage[toml]>=7.5.0",
    "types-pillow>=10.2.0",
    "types-redis>=4.6.0",
    "types-paramiko>=3.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
